--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <style>
-    .page-wrapper {
-        max-width: 1200px;
+    .inner {
+        max-width: 1000px;
         margin: 0 auto;
     }
 </style>
